src/hcparse/boost_wave/wave_c_api.h

BOOST_WAVE_EXPORT WaveContextHandle* wave_newWaveContext(
    const char* instring,
    const char* filename);
BOOST_WAVE_EXPORT void wave_destroyContext(WaveContextHandle* context);
BOOST_WAVE_EXPORT WaveIteratorHandle* wave_beginIterator(
    WaveContextHandle* context);
BOOST_WAVE_EXPORT WaveIteratorHandle* wave_endIterator(
    WaveContextHandle* context);
BOOST_WAVE_EXPORT void wave_advanceIterator(WaveIteratorHandle* iter);
BOOST_WAVE_EXPORT bool wave_neqIterator(
    WaveIteratorHandle* iter1,
    WaveIteratorHandle* iter2);
BOOST_WAVE_EXPORT WaveTokenHandle* wave_iterGetTok(
    WaveIteratorHandle* iter);
BOOST_WAVE_EXPORT WaveTokId   wave_tokGetId(WaveTokenHandle* tok);
BOOST_WAVE_EXPORT const char* wave_tokGetValue(WaveTokenHandle* tok);